Revision history for perl distribution Convos

5.32 Not Released
 - Add alert icon if a channel is frozen in the sidebar #568

5.31 2021-02-21T14:30:00+0900
 - Fix styling on login screen
 - Allow other hosts than "localhost" to skip the connect queuing

5.30 2021-02-20T16:33:00+0900
 - Add better user experience for +i (invite only) channels #568

5.29 2021-02-20T14:00:00+0900
 - Replaced spinning animation with scale translation between icons
 - Replaced hover zoom effect with circular border
 - Changed the headings to be less bold
 - Changed from "tools" icon to "users-cog" for conversation settings toggle
 - Moved video button down to chat input
 - Changed the textarea to fill up the whole chat input if multiple lines are present
 - Add (+) icon to the chat input with new action menu on small screens
   * Start video chat
   * Upload
   * Emojis

5.28 2021-02-18T23:11:20+0900
 - Fix video iframe to take full height #570
 - Add support for unicode to the Bot backend storage layer
 - Add error handling to Jitsi
 - Add suport for "suppress_do_not_know_reply" ot "Facts" bot action

5.27 2021-02-17T23:04:00+0900
 - Compatible with latest Mojolicious 9.0 and M::P::OpenAPI 4.0
 - "Facts" bot action will not learn questions
 - Fix searching case insensitive

5.26 2021-02-15T10:34:00+0900
 - Reverted "Add Content-Security-Policy header to Convos" #508

5.25 2021-02-15T10:25:00+0900
 - Add feedback when changing channel mode #454
 - Add rendering of banlist, exceptlist, invitelist and quietlist #432
 - Add "Facts" bot action
 - Add query_db() method to bot plugins
 - Add Content-Security-Policy header to Convos #508 #567
 - Entering "+" in the quick search bar will show conversation with unread messages
 - Entering "+#" in the quick search bar will show channels with unread messages
 - Entering "+@" in the quick search bar will show private conversation with unread messages

5.24 2021-02-11T09:30:00+0900